# cloudFreeImages

./: LICENSE  README.md  pyproject.toml
cloudFreeImages/: __init__.py  cli.py  coverage.py  crs_utils.py  downloader.py  enrich.py  results.py  scene_parser.py  scorer.py  stac_client.py  usgs_login.py
notebooks/: Untitled.ipynb  coverage_based_selection.ipynb  debug_path002_dec2019.ipynb  l1gt_download_demo.ipynb  pine_island_glacier_example.ipynb
tests/: test_crs_utils.py  test_scene_parser.py  test_scorer.py  test_stac_client.py
