[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudFreeImages"
version = "0.1.0"
description = "Identify cloud-free Landsat/Sentinel-2 scenes using ItsLive feature-tracking success as a proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pystac-client>=0.7",
    "requests>=2.28",
    "pandas>=2.0",
    "pyproj>=3.4",
    "rasterio>=1.3",
    "numpy>=1.24",
    "fsspec>=2023.1",
    "h5py>=3.8",
]

[project.optional-dependencies]
enrich = [
    # For optional cross-reference with official EO cloud-cover catalogs
    "pystac-client>=0.7",
]
viz = [
    "folium>=0.14",
    "matplotlib>=3.7",
    "geopandas>=0.14",
]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "responses>=0.24",
]

[project.scripts]
itslive-cloudfree = "itslive_cloudfree.cli:main"
itslive-usgs-login = "itslive_cloudfree.usgs_login:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudFreeImages/*"]

[tool.pytest.ini_options]
markers = [
    "integration: hits the live ItsLive STAC API (requires network)",
]
